--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Klikin  Commerces</string>
+    <string name="fragment_commerces_list">Listado de Comercios</string>
+    <string name="implement_listener"> must implement IFragmentsListener</string>
 </resources>
