Refactor api request, response and data models

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,7 @@
     <string name="fragment_commerces_list">Listado de Comercios</string>
     <string name="commerces">Comercios</string>
     <string name="loading">Cargando…</string>
-    <string name="implement_listener"> must implement IFragmentsListener</string>
+    <string name="category_other">OTHER</string>
+    <string name="error">Ha ocuurido un error inesperado</string>
+    <string name="implement_listener"> deberás implementar IFragmentsListener</string>
 </resources>
