--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="detail_fragment_take_me_here">Llévame aquí</string>
     <string name="detail_fragment_come_to_visit_us">¡Ven a conocernos!</string>
     <string name="detail_fragment_default_image">https://atenoil.com/wp-content/uploads/2018/07/6-min-1.jpg</string>
+    <string name="enable_settings_location">Para activar la localización ve a  los ajustes de la aplicación y acepta los permisos</string>
+    <string name="question_enable_gps">Tú GPS está deshabilitado, ¿quieres habilitarlo?</string>
+    <string name="yes">Si</string>
+    <string name="no">No</string>
 </resources>
