--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,10 +20,11 @@
     <string name="go_to_settings">Ve a ajustes y acepta los permisos</string>
     <string name="go_to_settings_location_permissions">Para activar la localización ve a ajustes y acepta los permisos</string>
     <string-array name="distances">
-        <item>1 KM</item>
-        <item>3 KM</item>
-        <item>5 KM</item>
-        <item>10 KM</item>
-        <item>20 KM</item>
+        <item> + 1 KM</item>
+        <item> + 3 KM</item>
+        <item> + 5 KM</item>
+        <item> + 10 KM</item>
+        <item> + 20 KM</item>
+        <item> + 50 KM</item>
     </string-array>
 </resources>
